# cpp_websrv

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  vcpkg.json
include/: plugin.hpp
src/: Manager.cpp  main.cpp  plugin.cpp
src/controllers/: TimeController.cpp  WebController.cpp
src/endpoints/: EchoEndpoint.cpp  HelloEndpoint.cpp  NewEndpoint.cpp  TimeEndpoint.cpp
src/routers/: ApiRouter.cpp  WebRouter.cpp
